PA2/samples/wrong_syntax_4.out

*** Error line 2.
    int int a;
        ^^^
*** syntax error

