PA2/samples/wrong_syntax_4.java
int foo() {
    int int a;
}